# dmarc-policy-website

./: Cargo.toml  README.md
backend/: Cargo.toml  README.md
backend/src/: data.rs  main.rs
backend/src/actions/: dmarc_lookup.rs
frontend/: index.html
src/: actions.rs  dmarc.rs  main.rs  setup.rs
